# Drone

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  rust-toolchain.toml
.githooks/: pre-push
.github/workflows/: ci.yml
Doc/: 00-vision.md  02-architecture.md  07-safety.md  README.md  dev-environment.md
Doc/decisions/: 0001-platform-airframe-stack.md  0002-mcu-and-language.md  0003-imu-icm42688-spi.md  0004-concurrency-embassy-channels.md  0005-pc-software-language-rust.md  0006-mechanical-cad-fusion360.md  0007-testing-and-ci-strategy.md  README.md
Hardware/: README.md
Hardware/Electrical/: README.md
Hardware/Mechanical/: README.md
crates/: README.md
crates/firmware-drone/: Cargo.toml  build.rs  memory.x
crates/firmware-drone-core/: Cargo.toml
crates/firmware-drone-core/src/: control_system.rs  lib.rs  mixer.rs  sensor_fusion.rs  supervisor_core.rs
crates/firmware-drone/.cargo/: config.toml
crates/firmware-drone/src/: main.rs  radio_link.rs  signals.rs  system_state.rs  tasks.rs
crates/firmware-drone/src/board/: microbit_v2.rs  mod.rs
crates/firmware-drone/src/signals/: attitude.rs  controller_demand.rs  cpu_load.rs  imu_data.rs  motor_command.rs  sensors.rs  status.rs  telemetry.rs  temperature.rs
crates/firmware-drone/src/tasks/: attitude_estimator.rs  comm_link.rs  control_system.rs  imu.rs  load_profiler.rs  motor_controller.rs  pilot_command.rs  remote_link.rs  sensors_aggregator.rs  status_led.rs  supervisor.rs  telemetry.rs  telemetry_aggregator.rs  telemetry_tx.rs  temperature.rs
crates/firmware-remote/: Cargo.toml
crates/firmware-remote-core/: Cargo.toml
crates/firmware-remote-core/src/: lib.rs
crates/firmware-remote/.cargo/: config.toml
crates/firmware-remote/src/: main.rs  signals.rs  tasks.rs
crates/firmware-remote/src/board/: microbit_v2.rs
crates/firmware-remote/src/signals/: control_mode_command.rs  pitch_command.rs  roll_command.rs  status.rs  telemetry.rs  throttle_command.rs  yaw_command.rs
crates/firmware-remote/src/tasks/: comm_link.rs  drone_link.rs  serial_link.rs  serial_link_rx.rs  serial_link_tx.rs  status_led.rs  supervisor.rs  telemetry_rx.rs
crates/firmware-types/: Cargo.toml
crates/firmware-types/src/: acceleration.rs  angular_rate.rs  attitude.rs  control_mode.rs  controller_demand.rs  cpu_load.rs  drone_state.rs  groundstation_command.rs  imu_data.rs  lib.rs  motor_command.rs  pilot_command.rs  pitch.rs  pitch_angle.rs  pitch_command.rs  remote_state.rs  roll.rs  roll_angle.rs  roll_command.rs  sensors.rs  telemetry.rs  telemetry_state.rs  temperature.rs  throttle.rs  throttle_command.rs  yaw.rs  yaw_angle.rs  yaw_command.rs
crates/groundstation/: Cargo.toml
crates/groundstation/src/: lib.rs  main.rs
doc/: 00-vision.md  02-architecture.md  README.md  ci-and-testing.md  dev-environment.md  progress.md
doc/decisions/: 0001-platform-airframe-stack.md  0004-concurrency-embassy-channels.md  0006-mechanical-cad-fusion360.md  0007-testing-and-ci-strategy.md  0008-repository-folder-layout.md  0009-workspace-bootstrap-and-crate-naming.md  0010-board-support-package.md  0011-task-tracking-issues-and-batches.md  0012-lint-and-format-policy.md  0013-async-communication-primitives.md  0013-pubsub-shared-state-embassy-watch.md  0014-radio-protocol-ieee802154.md  0015-host-testing-no-std-crates.md  0016-newtype-per-physical-quantity.md  0017-supervisor-failsafe-state-machine.md  0018-pc-link-uart-postcard-cobs.md  0019-airframe-class-3in-4s-printed.md  0020-telemetry-aggregator-single-publisher.md  0021-coordinate-frames-and-command-semantics.md  0022-attitude-estimation-complementary-filter.md  0023-motor-numbering-layout-rotation.md  0024-control-law-angle-mode-pd.md  README.md
doc/learning/: README.md  cpu-load-profiling-idle-spinner.md  embassy-time-and-tickless-timers.md  gpio-state-during-reset.md  imu-vibration-and-bench-psu-power.md  micromath-atan2-nan-and-valid-seeds.md  nested-result-with-timeout.md  postcard-maxsize-sizing-buffers.md  rust-value-semantics.md  serial-uart-framing-and-gotchas.md  slices-and-arrays.md
doc/research/: README.md
hardware/: README.md
hardware/electrical/: README.md  parts-list.md
hardware/mechanical/: README.md  Simple Motor Mount.f3d  Simple Motor Mount.stl
