[package]
name        = "firmware-drone-core"
version     = "0.1.0"
description = "Drone firmware: pure logic, host-testable. No HAL, no async runtime, no defmt."
edition.workspace    = true
license.workspace    = true
repository.workspace = true
publish              = false

# --- Discipline-by-graph -------------------------------------------------------
# Per ADR 0009, this crate is FORBIDDEN to depend on:
#   - any embassy-* crate
#   - any HAL or PAC (embassy-nrf, nrf52833-hal, nrf52833-pac, ...)
#   - defmt, defmt-rtt, panic-probe
# Reviewer reflex: scan this [dependencies] block on every PR that touches it.
[dependencies]
# Optional defmt: gives consumers (firmware-drone) access to `defmt::Format`
# derives on this crate's public types, without forcing defmt into the host
# test build. Same pattern as `firmware-types` — see ADR 0015 / 0009.
defmt = { workspace = true, optional = true }

firmware-types = { path = "../firmware-types" }

[lints]
workspace = true

[features]
defmt = ["dep:defmt", "firmware-types/defmt"]
