[package]
name        = "groundstation"
version     = "0.1.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish     = false

[[bin]]
name = "gs"
path = "src/main.rs"

[dependencies]
eframe     = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
serialport = "4.3"

[lints]
workspace = true
